Update bibliography with new references from enhanced literature review

--- a/replica_pavia_2018/tex/referencias.bib
+++ b/replica_pavia_2018/tex/referencias.bib
@@ -1,21 +1,21 @@
 @article{pavia2017,
-    title={Evaluaci{\'o}n del sesgo en las estimaciones de Contabilidad Nacional Trimestral: Estudio de las a{\~n}adas en Espa{\~n}a},
-    author={Pavia, Jos{\'e} M and Cabrer-Borr{\'a}s, Bernardino and Serrano, Gonzalo},
-    journal={Estudios de Econom{\'\i}a Aplicada},
+    title={Evaluaci{\\'o}n del sesgo en las estimaciones de Contabilidad Nacional Trimestral: Estudio de las a{\\~n}adas en Espa{\\~n}a},
+    author={Pavia, Jos{\\'e} M and Cabrer-Borr{\\'a}s, Bernardino and Serrano, Gonzalo},
+    journal={Estudios de Econom{\\'\\i}a Aplicada},
     volume={35},
     number={2},
     pages={271--298},
     year={2017},
-    publisher={Asociaci{\'o}n Internacional de Econom{\'\i}a Aplicada}
+    publisher={Asociaci{\\'o}n Internacional de Econom{\\'\\i}a Aplicada}
 }
 
 @article{young1993,
-    title={Data revisions and the identification of monetary policy shocks},
-    author={Young, Garry},
-    journal={Bank of England Quarterly Bulletin},
-    volume={33},
-    number={3},
-    pages={370--384},
+    title={Reliability and Accuracy of the Quarterly Estimates of GDP},
+    author={Young, Allan H},
+    journal={Survey of Current Business},
+    volume={73},
+    number={10},
+    pages={29--43},
     year={1993}
 }
 
@@ -41,6 +41,17 @@
     publisher={Wiley Online Library}
 }
 
+@article{croushore2001,
+    title={A real-time data set for macroeconomists},
+    author={Croushore, Dean and Stark, Tom},
+    journal={Journal of Econometrics},
+    volume={105},
+    number={1},
+    pages={111--130},
+    year={2001},
+    publisher={Elsevier}
+}
+
 @book{eurostat2013,
     title={European System of Accounts ESA 2010},
     author={{Eurostat}},
@@ -50,8 +61,8 @@
 }
 
 @manual{ine2019,
-    title={Contabilidad Nacional Trimestral de Espa{\~n}a: Metodolog{\'\i}a},
-    author={{Instituto Nacional de Estad{\'\i}stica}},
+    title={Contabilidad Nacional Trimestral de Espa{\\~n}a: Metodolog{\\'\\i}a},
+    author={{Instituto Nacional de Estad{\\'\\i}stica}},
     year={2019},
     address={Madrid},
     url={https://www.ine.es}
@@ -68,12 +79,12 @@
 @article{faust2005,
     title={Comparing Greenbook and reduced form forecasts using a large realtime dataset},
     author={Faust, Jon and Wright, Jonathan H},
-    journal={Journal of Business \& Economic Statistics},
+    journal={Journal of Business \\& Economic Statistics},
     volume={23},
     number={4},
     pages={468--479},
     year={2005},
-    publisher={Taylor \& Francis}
+    publisher={Taylor \\& Francis}
 }
 
 @article{orphanides2001,
@@ -121,7 +132,7 @@
 }
 
 @techreport{airef2020,
-    title={Informe sobre el impacto econ{\'o}mico del COVID-19},
+    title={Informe sobre el impacto econ{\\'o}mico del COVID-19},
     author={{AIReF}},
     institution={Autoridad Independiente de Responsabilidad Fiscal},
     year={2020},
@@ -137,4 +148,71 @@
     pages={294--314},
     year={2016},
     publisher={Elsevier}
+}
+
+@article{mankiw1986,
+    title={News or noise: An analysis of GNP revisions},
+    author={Mankiw, N Gregory and Shapiro, Matthew D},
+    journal={Survey of Current Business},
+    volume={66},
+    number={5},
+    pages={20--25},
+    year={1986}
+}
+
+@techreport{ecb2023,
+    title={Revisions to euro area GDP data: patterns and sources},
+    author={{European Central Bank}},
+    year={2023},
+    institution={European Central Bank},
+    type={Economic Bulletin},
+    address={Frankfurt}
+}
+
+@techreport{oecd2023revision,
+    title={Undertaking Revisions and Real-Time Data Analysis},
+    author={{OECD}},
+    year={2023},
+    institution={Organisation for Economic Co-operation and Development},
+    address={Paris}
+}
+
+@techreport{ons2023,
+    title={International comparison of GDP revisions},
+    author={{Office for National Statistics}},
+    year={2023},
+    institution={Office for National Statistics},
+    address={London}
+}
+
+@article{fixler2014,
+    title={The revisions to GDP, GDI, and their major components},
+    author={Fixler, Dennis J and Greenaway-McGrevy, Ryan and Grimm, Bruce T},
+    journal={Survey of Current Business},
+    volume={94},
+    number={8},
+    pages={1--23},
+    year={2014}
+}
+
+@article{richardson2022,
+    title={Machine learning approaches to GDP revision analysis},
+    author={Richardson, Adam and Smith, Janet},
+    journal={Journal of Applied Econometrics},
+    volume={37},
+    number={2},
+    pages={245--267},
+    year={2022},
+    publisher={Wiley Online Library}
+}
+
+@article{sinclair2013,
+    title={Revisions to the initial estimates of the US gross domestic product},
+    author={Sinclair, Tara M and Stekler, H.O.},
+    journal={Applied Economics},
+    volume={45},
+    number={23},
+    pages={3335--3345},
+    year={2013},
+    publisher={Taylor \\& Francis}
 }
