--- a/replica_pavia_2018/src/pavia replication.ipynb
+++ b/replica_pavia_2018/src/pavia replication.ipynb
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "a3d4bfae",
    "metadata": {},
    "outputs": [
@@ -265,7 +265,7 @@
      "text": [
       "=== INICIANDO ANÁLISIS DE CALIDAD AÑADAS CNTR ===\n",
       "Tipo de datos: NIVELES\n",
-      "Cargando datos desde: C:\\Users\\Usuario\\Documents\\Github\\Entropía\\replica pavia 2018\\datos\\cntr.csv\n",
+      "Cargando datos desde: ../datos/cntr.csv\n",
       "Datos cargados: (144, 109)\n",
       "Columnas: ['year', 'trim', '22/11/2005 17:56', '21/02/2006 21:59', '23/05/2006 12:57']...\n",
       "=== LIMPIANDO DATOS ORIGINALES ===\n",
@@ -596,7 +596,7 @@
     "class CNTRAnalysis:\n",
     "    \"\"\"Clase para análisis de calidad de añadas de la CNTR\"\"\"\n",
     "    \n",
-    "    def __init__(self, csv_path=r'C:\\Users\\Usuario\\Documents\\Github\\Entropía\\replica pavia 2018\\datos\\cntr.csv'):\n",
+    "    def __init__(self, csv_path='../datos/cntr.csv'):\n",
     "        self.csv_path = csv_path\n",
     "        self.datos_raw = None\n",
     "        self.datos_long = None\n",
@@ -1101,7 +1101,7 @@
     "        return self\n",
     "\n",
     "    def exportar_resultados(self, output_file=\"revisiones_CNTR_pib.csv\"):\n",
-    "        full_path = rf'C:\\Users\\Usuario\\Documents\\Github\\Entropía\\replica pavia 2018\\archivo de valores\\{output_file}'\n",
+    "        full_path = f'../archivo de valores/{output_file}'\n",
     "        self.revisiones.to_csv(full_path, index=False)\n",
     "        print(f\"Resultados exportados a: {output_file}\")\n",
     "        return self\n",
@@ -1148,7 +1148,7 @@
     "                axes[1, 1].tick_params(axis='x', rotation=45)\n",
     "            \n",
     "            plt.tight_layout()\n",
-    "            plt.savefig(r'C:\\Users\\Usuario\\Documents\\Github\\Entropía\\replica pavia 2018\\figuras\\analisis_cntr_graficos.png', dpi=300, bbox_inches='tight')\n",
+    "            plt.savefig('../figuras/analisis_cntr_graficos.png', dpi=300, bbox_inches='tight')\n",
     "            plt.show()\n",
     "            \n",
     "            print(\"Gráficos generados y guardados en: figuras/analisis_cntr_graficos.png\")\n",
@@ -1244,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "3d414ef8",
    "metadata": {},
    "outputs": [
@@ -1276,7 +1276,7 @@
     "import seaborn as sns\n",
     "\n",
     "# Definir la ruta de la carpeta de destino\n",
-    "carpeta_figuras = r'C:\\Users\\Usuario\\Documents\\Github\\Entropía\\replica pavia 2018\\figuras'\n",
+    "carpeta_figuras = '../figuras/'\n",
     "\n",
     "def parsear_fecha_vintage(fecha_str):\n",
     "    \"\"\"\n",
@@ -1653,7 +1653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "93721453",
    "metadata": {},
    "outputs": [
@@ -1872,7 +1872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "806cb2da",
    "metadata": {},
    "outputs": [
@@ -1901,7 +1901,7 @@
       "  ✅ Serie P2: 48 puntos\n",
       "  ✅ Serie DEF: 48 puntos\n",
       "Total series graficadas: 5\n",
-      "✅ Figura guardada como: C:\\Users\\Usuario\\Documents\\Github\\Entropía\\replica pavia 2018\\figuras\\figura_2_pavia_robusta_2005_2016.png\n"
+      "✅ Figura guardada como: ../figuras/figura_2_pavia_robusta_2005_2016.png\n"
      ]
     },
     {
@@ -1948,7 +1948,7 @@
       "  ✅ Serie P2: 79 puntos\n",
       "  ✅ Serie DEF: 80 puntos\n",
       "Total series graficadas: 5\n",
-      "✅ Figura guardada como: C:\\Users\\Usuario\\Documents\\Github\\Entropía\\replica pavia 2018\\figuras\\figura_2_pavia_robusta_2005_2024.png\n"
+      "✅ Figura guardada como: ../figuras/figura_2_pavia_robusta_2005_2024.png\n"
      ]
     },
     {
@@ -1987,7 +1987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "0eef23fd",
    "metadata": {},
    "outputs": [
@@ -1997,7 +1997,7 @@
      "text": [
       "=== EVOLUCIÓN ESTIMACIONES 2020Q1 - VERSIÓN ROBUSTA ===\n",
       "Vintages válidos para 2020Q1: 42\n",
-      "✅ Figura guardada como: C:\\Users\\Usuario\\Documents\\Github\\Entropía\\replica pavia 2018\\figuras\\evolucion_estimaciones_2020Q1_robusto.png\n"
+      "✅ Figura guardada como: ../figuras/evolucion_estimaciones_2020Q1_robusto.png\n"
      ]
     },
     {
@@ -2154,7 +2154,7 @@
        " 4010        -4.178040       -4.178040 2025-06-25 09:05:00  )"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2181,7 +2181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "6f5d66a5",
    "metadata": {},
    "outputs": [
@@ -2477,10 +2477,8 @@
     "        \n",
     "        # LaTeX (mantener en directorio actual o cambiar también si quieres)\n",
     "        # LaTeX\n",
-    "        carpeta_tex = '../tex/'\n",
-    "        os.makedirs(carpeta_tex, exist_ok=True)\n",
     "\n",
-    "        ruta_latex = os.path.join(carpeta_tex, f'tabla_2_latex_{tipo_tasa}.tex')\n",
+    "        ruta_latex = os.path.join(carpeta_tablas, f'tabla_2_latex_{tipo_tasa}.tex')\n",
     "        with open(ruta_latex, 'w') as f:\n",
     "            f.write(\"\\\\begin{table}[htbp]\\n\")\n",
     "            f.write(\"\\\\centering\\n\")\n",
@@ -2578,7 +2576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "6a385f66",
    "metadata": {},
    "outputs": [
@@ -2671,7 +2669,7 @@
       "\n",
       "✅ Resultados guardados:\n",
       "  - CSV: ../tablas/\\tabla_2_*_interanuales_1996_2016.csv\n",
-      "  - LaTeX: ../tex/tabla_2_latex_interanuales.tex\n",
+      "  - LaTeX: ../tablas/tabla_2_latex_interanuales.tex\n",
       "\n",
       "================================================================================\n",
       "COMPARACIÓN CON PAVIA ET AL. (2017)\n",
@@ -2689,7 +2687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "a6d039f3",
    "metadata": {},
    "outputs": [
@@ -2797,7 +2795,7 @@
       "\n",
       "✅ Resultados guardados:\n",
       "  - CSV: ../tablas/\\tabla_2_*_interanuales_1996_2024.csv\n",
-      "  - LaTeX: ../tex/tabla_2_latex_interanuales.tex\n",
+      "  - LaTeX: ../tablas/tabla_2_latex_interanuales.tex\n",
       "\n",
       "================================================================================\n",
       "COMPARACIÓN CON PAVIA ET AL. (2017)\n",
@@ -2816,7 +2814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "2ab6f4b4",
    "metadata": {},
    "outputs": [
@@ -2909,7 +2907,7 @@
       "\n",
       "✅ Resultados guardados:\n",
       "  - CSV: ../tablas/\\tabla_2_*_intertrimestrales_1995_2016.csv\n",
-      "  - LaTeX: ../tex/tabla_2_latex_intertrimestrales.tex\n",
+      "  - LaTeX: ../tablas/tabla_2_latex_intertrimestrales.tex\n",
       "\n",
       "================================================================================\n",
       "COMPARACIÓN CON PAVIA ET AL. (2017)\n",
