--- a/replica_pavia_2018/tex/referencias.bib
+++ b/replica_pavia_2018/tex/referencias.bib
@@ -1,12 +1,12 @@
 @article{pavia2017,
-    title={Evaluaci{\\'o}n del sesgo en las estimaciones de Contabilidad Nacional Trimestral: Estudio de las a{\\~n}adas en Espa{\\~n}a},
-    author={Pavia, Jos{\\'e} M and Cabrer-Borr{\\'a}s, Bernardino and Serrano, Gonzalo},
-    journal={Estudios de Econom{\\'\\i}a Aplicada},
+    title={Evaluación del sesgo en las estimaciones de Contabilidad Nacional Trimestral: Estudio de las añadas en España},
+    author={Pavia, José M and Cabrer-Borrás, Bernardino and Serrano, Gonzalo},
+    journal={Estudios de Economía Aplicada},
     volume={35},
     number={2},
     pages={271--298},
     year={2017},
-    publisher={Asociaci{\\'o}n Internacional de Econom{\\'\\i}a Aplicada}
+    publisher={Asociaciónn Internacional de Economía Aplicada}
 }
 
 @article{young1993,
